added comments and code clean up

--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,17 @@
 /*
  * Table of contents:
  * 
- * from line 14 - Primary
- * from line 87 - Preloader style
- * from line 116 - Cursor
- * from line 223 - Primary style
- * from line 438 - Navigation
- * from line 843 - Home/Work/Project pages
- * from line 1623 - Studio page
- * from line 1712 - Blog/Post page
- * from line 2131 - Contact
- * from line 2558 - Media, for smaller screens
+ * Primary
+ * Preloader style
+ * Cursor
+ * Primary style
+ * Navigation
+ * Home/Work/Project pages
+ * Studio page
+ * Blog/Post page
+ * Contact
+ * Media, for smaller screens
+ * All custom and later added
  *
  */
 
